<resources>
    <string name="app_name">booking</string>

    <string name="catalog">Каталог</string>
    <string name="favorite">Избранное</string>
    <string name="city">Город</string>

    <string name="ok">Ок</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>

    <string name="login">Логин</string>
    <string name="log_in">Войти</string>
    <string name="entry">Вход</string>
    <string name="register">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="lastname">Фамилия</string>
    <string name="firstname">Имя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="birthday">Дата рождения</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="wrong_details">Неверные логин или пароль</string>
    <string name="change_password">Изменить пароль</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="password_mismatch">Пароли не совпадают</string>
    <string name="logout">Выйти</string>
    <string name="there_are_empty_fields">Заполнены не все поля</string>

    <string name="need_push">Уведомлять о предстоящих забронированных событиях</string>
    <string name="input_new_name">Введите новое имя</string>
    <string name="input_new_lastname">Введите новую фамилию</string>
    <string name="input_new_birthday">Введите новую дату рождения</string>

    <string name="search">Поиск</string>
    <string name="profile">Профиль</string>
    <string name="filter">Фильтр</string>
    <string name="booking_history_empty">История бронирований пуста</string>
    <string name="history">История</string>
    <string name="cancel_booking_success">Бронирование отменено</string>
    <string name="cancel_booking_failure">Не удалось отменить бронирование</string>
    <string name="delete_booking_failure">Не удалось удалить бронирование из истории</string>
    <string name="delete_booking_success">Бронирование удалено из истории</string>

    <string name="booked">Забронировано</string>
    <string name="ended">Событие завершилось</string>
    <string name="canceled_by_client">Отменено клиентом</string>
    <string name="canceled_by_provider">Отменено заведением</string>
    <string name="unidentified_status">Неопознанный статус</string>

    <string name="delete">Удалить</string>
    <string name="delete_booking_confirm">Вы точно хотите удалить бронирование из истории?</string>
    <string name="cancel_booking">Отменить</string>
    <string name="cancel_booking_confirm">Вы точно хотите отменить бронирование?</string>

    <string name="success_booked">Успешно забронировано</string>
    <string name="failure_booked">Не удалось забронировать место</string>
    <string name="choose_free_place">Необходимо выбрать свободное место</string>
    <string name="choose_date">Дата бронирования</string>
    <string name="book">Забронировать</string>

    <string name="not_registered">Не удалось зарегистрировать Ваш профиль</string>
    <string name="success_saved">Сохранено</string>
    <string name="error_happen">Произошла ошибка</string>
    <string name="data_not_saved">Не удалось сохранить данные</string>
    <string name="logout_failed">Не удалось выйти из аккаунта</string>
    <string name="wrong_old">Неверно введён старый пароль</string>

    <string name="start">Начало</string>
    <string name="booking_start">Начальное время бронирования</string>
    <string name="end">Конец</string>
    <string name="status">Статус:</string>
    <string name="booking_end">Конечное время бронирования</string>
    <string name="end_must_be_more_than_start">Время конца должно быть больше времени начала</string>

    <string name="loading_error">Не удалось загрузить данные</string>
    <string name="service_is_unavailable">Сервис недоступен</string>
    <string name="retry_later">Попробуйте позже</string>
    <string name="retry">Попробовать снова</string>
    <string name="network_not_available">Нет доступа к сети</string>

    <string name="place_booked_notification">У Вас забронировано место с %s до %s</string>
    <string name="booking_notification">Напоминание о бронировании</string>
</resources>